--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devgroup/yii2-arangodb",
+    "name": "composer/yii2-arangodb",
     "description": "Yii2 arangodb components",
     "type": "yii2-extension",
     "keywords": ["yii2","arangodb"],
