--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "": "",
+    "name": "explosivebit/yii2-arangodb",
     "description": "Yii2 arangodb components",
     "type": "yii2-extension",
     "keywords": ["yii2","arangodb"],
