--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "explosivebit/yii2-arangodb",
+    "name": "elfarqy/yii2-arangodb",
     "description": "Yii2 arangodb components",
     "type": "yii2-extension",
     "keywords": ["yii2","arangodb"],
@@ -8,12 +8,16 @@
         {
             "name": "Ilya Rumyantsev",
             "email": "explosivebit@gmail.com"
+        },
+	{
+            "name": "Alvian Burhanuddin",
+            "email": "alvianthelfarqy@gmail.com"
         }
     ],
     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*",
-        "triagens/arangodb": "*"
+        "triagens/arangodb": "~3.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*"
